# brickman

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  brickdm.c  brickdm.h  brickdm_battery.c  brickdm_event.c  brickdm_home.c  brickdm_power.c  brickman.sublime-project  build-depends.txt  release.sh  setup.cmake
.travis/: ev3dev-archive-keyring.gpg
bindings/: GLib.vapi  NMClient-1.0-custom.vala  NMClient-1.0.gir  NMClient-1.0.metadata  NetworkManager-1.0.gir  NetworkManager-1.0.metadata  Posix.vapi  UPowerGlib-1.0.metadata  generate  libnm-glib.vapi  libnm-util.vapi  m2tk.vapi  u8g.vapi  upower.vapi
cmake/: ValaPrecompile.cmake
data/: CMakeLists.txt  openroberta-connected12x9.pbm  openroberta-connected16x16.pbm  openroberta-idle12x9.pbm  openroberta-idle16x16.pbm  pnmtopng.cmake  splash.pbm
debian/: brickman.service  changelog  control  copyright  gbp.conf  release.sh  rules
debian/source/: options
doc/: navigation.fodg
docker/: armel.dockerfile  armhf.dockerfile  setup.sh
lib/bluez5/: Adapter.vala  AgentManager.vala  Device.vala  Error.vala  Manager.vala  UUID.vala  Uuid.vala
lib/connman/: Manager.vala  Peer.vala  Service.vala  Technology.vala
lib/dbus/: ObjectManager.vala  Properties.vala
lib/m2tk-glib/: GAlign.vala  GBox.vala  GButton.vala  GElement.vala  GElementList.vala  GFontList.vala  GGridList.vala  GHList.vala  GHide.vala  GLabel.vala  GListElement.vala  GM2tk.vala  GNullElement.vala  GRoot.vala  GScrollable.vala  GSpace.vala  GStrItem.vala  GStrItemList.vala  GStrList.vala  GToggle.vala  GVList.vala  GVScrollBar.vala
lib/systemd/: Logind.vala  Systemd.vala  logind-interfaces.vala  systemd-interfaces.vala
lib/upower/: Device.vala  UPower.vala
src/: AlsaBackedMixerElement.vala  AlsaInterface.vala  BatteryInfoScreen.vala  BatteryStatsScreen.vala  BatteryStatusBarItem.vala  BrickManager.vala  GUI.vala  GlobalManager.vala  HomeScreen.vala  Network.vala  NetworkStatusScreen.vala  NetworkTechnologyItem.vala  Power.vala  Screen.vala  ShutdownScreen.vala  StatusBar.vala  StatusBarItem.vala  Version.vala.in  brickdm.vala  event.vala  gui.vala  home.vala  main.vala  power.vala  systemd.vala  ui.vala
src/controller/: AboutController.vala  AudioController.vala  BatteryController.vala  BluetoothController.vala  DeviceBrowserController.vala  FileBrowserController.vala  IBrickManagerModule.vala  NetworkController.vala  OpenRobertaController.vala  SoundController.vala  USBController.vala  UsbController.vala
src/dbus/: BlueZ5Agent.vala  Bluez5Agent.vala  ConnManAgent.vala  ConnmanAgent.vala
src/view/: AboutWindow.vala  BatteryHistScreen.vala  BatteryHistWindow.vala  BatteryInfoScreen.vala  BatteryInfoWindow.vala  BatteryStatsScreen.vala  BatteryStatsWindow.vala  BatteryStatusBarItem.vala  BluetoothAdapterInfoWindow.vala  BluetoothAdaptersWindow.vala  BluetoothDeviceInfoWindow.vala  BluetoothDeviceMenuItem.vala  BluetoothDeviceWindow.vala  BluetoothDevicesWindow.vala  BluetoothStatusBarItem.vala  BluetoothWindow.vala  BrickManagerWindow.vala  ConnManAgentInputDialog.vala  ConnmanAgentInputDialog.vala  DeviceBrowserWindow.vala  FileBrowserWindow.vala  HomeScreen.vala  HomeWindow.vala  MixerElementSelectorWindow.vala  MixerElementVolumeWindow.vala  MotorBrowserWindow.vala  MotorInfoWindow.vala  MotorValueDialog.vala  NetworkConnectionDnsWindow.vala  NetworkConnectionEnetWindow.vala  NetworkConnectionIpv4Window.vala  NetworkConnectionItem.vala  NetworkConnectionMenuItem.vala  NetworkConnectionWindow.vala  NetworkConnectionsScreen.vala  NetworkConnectionsWindow.vala  NetworkPropertiesWindow.vala  NetworkStatusBarItem.vala  NetworkStatusScreen.vala  NetworkStatusWindow.vala  (+25 more)
src/view_model/: AlsaBackedMixerElement.vala  IMixerElementViewModel.vala
test/: BrickDisplayManager.vala  BrickManager.vala  ControlPanel.vala  FakeBlueZ5.vala  FakeBluez5.vala  FakeConnMan.vala  FakeConnman.vala  FakeEV3LCDDevice.vala  GUI.vala  main.vala
test/controller/: FakeAboutController.vala  FakeAudioController.vala  FakeBatteryController.vala  FakeBluetoothController.vala  FakeDeviceBrowserController.vala  FakeFileBrowserController.vala  FakeNetworkController.vala  FakeOpenRobertaController.vala  FakeSoundController.vala  FakeUSBController.vala  FakeUsbController.vala
test/glade/: ConnManServiceIPv4Dialog.glade  ConnmanAgentRequestInputDialog.glade  ControlPanel.glade
test/view_model/: FakeMixerElement.vala
